# gigawork

./: .pre-commit-config.yaml  README.md  pyproject.toml  requirements.txt  setup.py
