[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "gigawork"
version = "1.4.3"
description = "A tool for extracting GitHub Actions workflows"
readme = { file = "README.md", content-type = "text/markdown" }
license = "LGPL-3.0-or-later"
license-files = ["LICENSE.txt"]
authors = [
  { name = "Guillaume Cardoen", email="Guillaume.CARDOEN@umons.ac.be" }
]
requires-python = ">=3.10"

keywords = ["gha", "workflows", "dataset", "tool"]

classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Developers",
  "Intended Audience :: Education",
  "Intended Audience :: Information Technology",
  "Intended Audience :: Science/Research",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
]

dependencies = [
  "click~=8.1.7",
  "GitPython~=3.1.45",
  "jsonschema~=4.21.0",
  "ruamel.yaml~=0.18.6",
]

[project.urls]
homepage = "https://github.com/sgl-umons/gigawork"
repository = "https://github.com/sgl-umons/gigawork"

[project.scripts]
gigawork = "gigawork.main:main"

[tool.setuptools]
zip-safe = true

[tool.setuptools.packages.find]
include = ["gigawork"]

[tool.setuptools.package-data]
gigawork = ["github-workflow.json"]
